--- a/src/styles/components/_layoutGrid.scss
+++ b/src/styles/components/_layoutGrid.scss
@@ -5,6 +5,7 @@
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     grid-column-gap: 10px;
+    position: relative;
 
     &__content {
         padding-top: 82px;
@@ -12,6 +13,7 @@
         display: grid;
         grid-template-columns: repeat(12, 1fr);
         grid-column-gap: 10px;
+        padding-bottom: 58px;
     }
 }
 
