--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,7 +3,7 @@
 @import './components/_categories';
 @import './components/_categoryBox';
 @import './components/_shops';
-@import './components/_introText';
+@import './components/_about';
 @import './components/_location';
 @import './components/_brands';
 @import './components/_gallery';
@@ -11,3 +11,5 @@
 @import './components/_product';
 @import './components/_products';
 @import './components/typography';
+@import './components/resetDefault';
+@import './components/footer';
