--- a/src/styles/components/_location.scss
+++ b/src/styles/components/_location.scss
@@ -1,17 +1,34 @@
 @import 'src/utils/mixins/screens';
-@import 'src/utils/mixins/elevation';
 
 .location {
     grid-column: 1 / span 12;
-    > div {
-      position: relative;
+    margin-top: 40px;
+
+    &__container {
+      display: flex;
+      padding-bottom: 20px;
+    }
+
+    &__itemWrap {
+      display: flex;
+      margin: 20px 0;
+
+    }
+
+    &__text {
+      display: flex;
+      flex-direction: column;
+      padding-left: 10px;
+    }
+
+    &__title {
+      padding-bottom: 5px;
     }
 
     &__map {
-      grid-column: 7 / span 4;
-    }
-    &__map {
-      grid-column: 1 / span 6;
+      height: 400px;
+      flex: 1 1 0%;
+      margin-left: 30px;
     }
 }
 
