--- a/src/styles/components/_product.scss
+++ b/src/styles/components/_product.scss
@@ -1,5 +1,4 @@
 @import 'src/utils/mixins/screens';
-@import 'src/utils/mixins/elevation';
 
 .product {
     grid-column: auto / span 3;
@@ -13,12 +12,17 @@
     color: black;
     text-decoration: none;
 
+    &__title {
+      padding: 10px 0;
+    }
+    &__description {
+      padding: 10px 0;
+    }
     &__price {
       font-weight: bold;
-      font-style: normal;
       line-height: 120%;
       font-size: 18px;
-      margin: 0;
+      padding: 10px 0;
     }
 }
 
