--- a/src/styles/components/_products.scss
+++ b/src/styles/components/_products.scss
@@ -3,25 +3,41 @@
 
 .scrapedProducts {
     grid-column: 1 / span 12;
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-column-gap: 16px;
+    margin-top: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
 
+    &__grid {
+      display: grid;
+      grid-template-columns: repeat(12, 1fr);
+      grid-column-gap: 16px;
+    }
+  
     &__button {
-      background-color: grey;
+      background-color:rgba(147, 146, 152, 0.5); // color picked from logo
       margin: 10px 0;
-      grid-column: 1 / span 12;
+      color: black;
+      text-decoration: none;
+      border-radius: 20px;
+      padding: 10px 15px;
+      font-weight: bold;
+      @include elevation-transition();
+      transition: all 0.3s cubic-bezier(0.09, 0.5, 0.26, 0.9);
+      &:hover {
+        @include elevation(2, false);
+      }
     }
 }
 
 @media (#{$phone}) and (#{$tabletMax}) {
   .scrapedProducts {
         grid-column: 1 / span 4;
-        grid-template-columns: repeat(4, 1fr);
-        grid-column-gap: 8px;
 
-        &__button {
-          grid-column: 1 / span 4;
-    }
+        &__grid {
+          grid-template-columns: repeat(4, 1fr);
+          grid-column-gap: 8px;
+        }
+
   }
 }
