--- a/src/styles/components/typography.scss
+++ b/src/styles/components/typography.scss
@@ -36,9 +36,17 @@
     font-size: 14px;
 }
 
+.sectionTitle {
+    font-style: normal;
+    font-weight: bold;
+    line-height: 90%;
+    font-size: 31.5px;
+    padding: 20px 0;
+}
+
 @media (min-width: 1920px) {
     .h1 {
-        font-size: 36px;
+        font-size: 26px;
     }
     .h2 {
         font-size: 24px;
@@ -46,7 +54,8 @@
     .p {
         font-size: 16px;
     }
-    .h-extra-size {
-        font-size: 48px;
+    .sectionTitle {
+        font-size: 26px;
+        padding: 5px;
     }
 }
