Updated category pages and clean up

--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -14,7 +14,7 @@
         margin: auto;
     }
 
-    &__text{
+    &__text {
         padding: 20px 0;
         width: 40%;
         margin-right: auto;
@@ -28,5 +28,20 @@
 @media (#{$phone}) and (#{$tabletMax}) {
     .about {
         grid-column: 1 / span 4;
+        margin-top: 20px;
+
+        &__wrap {
+            display: block;
+        }
+
+        &__image {
+            width: 100%;
+            padding-top: 10px;
+        }
+
+        &__text {
+            padding: 0;
+            width: auto;
+        }
     }
 }
