--- a/src/styles/components/_location.scss
+++ b/src/styles/components/_location.scss
@@ -26,7 +26,6 @@
     }
 
     &__map {
-      height: 400px;
       flex: 1 1 0%;
       margin-left: 30px;
     }
@@ -35,5 +34,14 @@
 @media (#{$phone}) and (#{$tabletMax}) {
   .location {
         grid-column: 1 / span 4;
+        margin-top: 20px;
+
+        &__container {
+          display: block;
+        }
+
+        &__map {
+          margin-left: 0;
+        }
   }
 }
