--- a/src/styles/components/_product.scss
+++ b/src/styles/components/_product.scss
@@ -7,10 +7,12 @@
     flex-direction: column;
     border: 1px solid grey;
     padding: 10px;
-    margin: 5px 0;
+    margin: 5px;
     border-radius: 8px;
     color: black;
     text-decoration: none;
+    max-width: 220px;
+    box-sizing: border-box;
 
     &__title {
       padding: 10px 0;
@@ -27,7 +29,8 @@
 }
 
 @media (#{$phone}) and (#{$tabletMax}) {
-  .productWrapper {
-        grid-column: auto / span 2;
+  .product {
+        grid-column: auto / span 4;
+        max-width: 100%;
   }
 }
