--- a/src/styles/components/_shops.scss
+++ b/src/styles/components/_shops.scss
@@ -2,10 +2,10 @@
 @import 'src/utils/mixins/elevation';
 
 .onlineShopsSection {
-    grid-column: 2 / span 8;
+    grid-column: 1 / span 12;
     position: relative;
     border-radius: 8px;
-    margin: 40px 0;
+    margin-top: 40px;
     display: flex;
     align-items: center;
 
@@ -16,6 +16,7 @@
     &__itemWrapper {
         display: flex;
     }
+
     &__item {
         border: 1px solid rgba(147, 146, 152, 0.5); // color picked from logo
         border-radius: 8px;
@@ -33,8 +34,7 @@
     }
 
     &__text {
-        margin-left: auto;
-        padding-left: 20px;
+        padding-left: 30px;
     }
 
     &__description {
@@ -45,5 +45,25 @@
 @media (#{$phone}) and (#{$tabletMax}) {
     .onlineShopsSection {
         grid-column: 1 / span 4;
+        display: block;
+        margin-top: 20px;
+
+        &__image {
+            width: 100%;
+            height: auto;
+        }
+
+        &__itemWrapper {
+            justify-content: center;
+        }
+
+        &__text {
+            margin-left: 0;
+            padding-left: 0;
+        }
+
+        &__description {
+            padding-bottom: 20px;
+        }
     }
 }
