--- a/src/styles/components/typography.scss
+++ b/src/styles/components/typography.scss
@@ -32,7 +32,6 @@
 .p {
     font-style: normal;
     font-weight: normal;
-    line-height: 120%;
     font-size: 14px;
 }
 
@@ -44,7 +43,7 @@
     padding: 20px 0;
 }
 
-@media (min-width: 1920px) {
+@media only screen and (max-width: 600px) {
     .h1 {
         font-size: 26px;
     }
@@ -52,10 +51,10 @@
         font-size: 24px;
     }
     .p {
-        font-size: 16px;
+        font-size: 14px;
     }
     .sectionTitle {
         font-size: 26px;
-        padding: 5px;
+        padding: 10px 0;
     }
 }
