--- a/src/styles/components/_product.scss
+++ b/src/styles/components/_product.scss
@@ -12,7 +12,7 @@
     color: black;
     text-decoration: none;
     max-width: 220px;
-    box-sizing: border-box;
+    justify-content: space-between;
 
     &__title {
       padding: 10px 0;
