--- a/src/styles/components/typography.scss
+++ b/src/styles/components/typography.scss
@@ -16,8 +16,7 @@
     font-style: normal;
     font-weight: 800;
     line-height: normal;
-    font-size: 12px;
-    letter-spacing: 10%;
+    font-size: 14px;
     letter-spacing: 0.1em;
     text-transform: uppercase;
 }
@@ -49,6 +48,9 @@
     }
     .h2 {
         font-size: 24px;
+    }
+    .h3 {
+        font-size: 12px;
     }
     .p {
         font-size: 14px;
