--- a/src/styles/components/_product.scss
+++ b/src/styles/components/_product.scss
@@ -1,7 +1,6 @@
 @import 'src/utils/mixins/screens';
 
 .product {
-    grid-column: auto / span 3;
     cursor: pointer;
     display: flex;
     flex-direction: column;
@@ -12,11 +11,17 @@
     color: black;
     text-decoration: none;
     max-width: 220px;
+    box-sizing: border-box;
     justify-content: space-between;
 
     &__title {
       padding: 10px 0;
     }
+
+    &__image {
+      width: 100%;
+    }
+
     &__description {
       padding: 10px 0;
     }
@@ -30,7 +35,12 @@
 
 @media (#{$phone}) and (#{$tabletMax}) {
   .product {
-        grid-column: auto / span 4;
         max-width: 100%;
+
+        &__image {
+          width: auto;
+          max-height: 200px;
+          align-self: center;
+        }
   }
 }
