--- a/src/styles/components/_shops.scss
+++ b/src/styles/components/_shops.scss
@@ -22,7 +22,6 @@
         border-radius: 8px;
         overflow: hidden;
         padding: 5px;
-        margin-right: 20px;
         @include elevation(0, false);
         @include elevation-transition();
         transition: all 0.3s cubic-bezier(0.09, 0.5, 0.26, 0.9);
@@ -39,6 +38,10 @@
 
     &__description {
         padding-bottom: 30px;
+    }
+
+    &__shopLink {
+        outline: none;
     }
 }
 
