--- a/src/styles/components/_categories.scss
+++ b/src/styles/components/_categories.scss
@@ -2,25 +2,32 @@
 
 .categories {
     grid-column: 1 / span 12;
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-column-gap: 16px;
     margin-top: 40px;
 
     &__title {
         grid-column: 1 / span 12;
+    }
+
+    &__wrap {
+        margin-top: 5px;
+        display: grid;
+        grid-template-columns: repeat(12, 1fr);
+        grid-column-gap: 16px;
     }
 }
 
 @media (#{$phone}) and (#{$tabletMax}) {
     .categories {
         grid-column: 1 / span 4;
-        grid-template-columns: repeat(4, 1fr);
-        grid-column-gap: 8px;
         margin-top: 20px;
 
         &__title {
             grid-column: 1 / span 4;
+        }
+
+        &__wrap {
+            grid-template-columns: repeat(4, 1fr);
+            grid-column-gap: 8px;
         }
     }
 }
