--- a/src/styles/components/_shops.scss
+++ b/src/styles/components/_shops.scss
@@ -15,10 +15,12 @@
 
     &__itemWrapper {
         display: flex;
+        gap: 15px;
     }
 
     &__item {
         border: 1px solid rgba(147, 146, 152, 0.5); // color picked from logo
+        background: #f7f8fb;
         border-radius: 8px;
         overflow: hidden;
         padding: 5px;
@@ -27,7 +29,7 @@
         transition: all 0.3s cubic-bezier(0.09, 0.5, 0.26, 0.9);
         &:hover {
             @include elevation(2, false);
-            transform: scale(1.1);
+            transform: scale(1.05);
         }
         cursor: pointer;
     }
@@ -42,6 +44,8 @@
 
     &__shopLink {
         outline: none;
+        display: flex;
+        align-items: center;
     }
 }
 
